--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,5 @@
 @import 'node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
 
-div { 
-  background-color: black;
+body { 
+  background-color: blue;
 }
